--- a/inicio.html
+++ b/inicio.html
@@ -10,6 +10,11 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+
+    <!-- bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+
 </head>
 <body>
     <header>
@@ -80,19 +85,19 @@
     </aside>
     
     <!-- Seccion de productos ofertados -->
-    <section id="products" class="product-grid">
+    <!-- <section id="products" class="product-grid"> -->
          <!-- <h2></h2> --> 
-        <div class="product-card" id="category1">
+        <!-- <div class="product-card" id="category1">
             <img src="imagen1IS.jpg" alt="Cemento">
             <h3>Cemento</h3>
             <button>Mas informacion</button>
             <p>Descripción: Cemento de alta calidad para tus proyectos.</p>
             <p class="price">500 bs</p>
-            <button class="btn">Carrito</button>
+            <button class="btn">Carrito</button> -->
             <!--   <button>  <ion-icon name="logo-whatsapp"></ion-icon> </button>
             <button><ion-icon name="arrow-redo-outline"></ion-icon></button> -->
 
-        </div>
+        <!-- </div>
         <div class="product-card" id="category2">
             <img src="imagen3IS.jpeg" alt="Ladrillos">
             <h3>Ladrillos</h3>
@@ -125,7 +130,7 @@
             <p class="price">400bs</p>
             <button class="btn">Carrito</button>
         </div>
-    </section>
+    </section> -->
 
     <footer>
         <p>&copy; 2024 Tienda de Materiales de Construcción. Todos los derechos reservados.</p>
