--- a/inicio.html
+++ b/inicio.html
@@ -30,10 +30,11 @@
                 <li><a href="login.html">Login <ion-icon name="person-circle-outline"></ion-icon></a></li>
             </ul>
         </nav>
-
         <div class="search-container">
-            <input type="text" placeholder="Buscar productos..." class="search-input">
-            <button class="search-button">Buscar <ion-icon name="search-outline"></ion-icon></button>
+            <input type="text" id="searchInput" placeholder="Buscar productos..." class="search-input">
+            <button class="search-button" onclick="buscarProducto()">Buscar <ion-icon name="search-outline"></ion-icon></button>
+             <!-- Mensaje de "No se encontró ningún producto con ese nombre" -->
+             <p id="noResultMessage" style="display: none; color: red;">No se encontró ningún producto con ese nombre.</p>
         </div>
     </header>
     
@@ -136,5 +137,6 @@
             <a href="#">Twitter</a>
         </p>
     </footer>
+    <script src="buscador.js" ></script>
 </body>
 </html>
