Logo Cambiado de la pagina

--- a/inicio.html
+++ b/inicio.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <header>
-        <img src="LogoLoginIS.png" alt="Logo de la Tienda" class="header-image">
+        <img src="LogoIS_Oficial.png" alt="Logo de la Tienda" class="header-image">
         <h1></h1>
         <input type="checkbox" id="menu-toggle" class="menu-toggle">
         <label for="menu-toggle" class="menu-icon">
@@ -25,7 +25,7 @@
         <nav>
             <ul class="nav-list" id="nav-list">
                 <li><a href="#home">Inicio <ion-icon name="home-outline"></ion-icon></a></li>
-                <li><a href="notificaciones.html">Notificaciones <ion-icon name="notifications-circle-outline"></ion-icon></a></li>
+                <!-- <li><a href="notificaciones.html">Notificaciones <ion-icon name="notifications-circle-outline"></ion-icon></a></li> -->
                 <li><a href="carrito.html">Carrito <ion-icon name="cart-outline"></ion-icon></a></li>
                 <li><a href="login.html">Login <ion-icon name="person-circle-outline"></ion-icon></a></li>
             </ul>
