--- a/ofertar-material.html
+++ b/ofertar-material.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <header>
-        <img src="imagenLogoIS.png" alt="Logo de la Tienda" class="header-image">
+        <img src="LogoIS_Oficial.png" alt="Logo de la Tienda" class="header-image">
         <h1></h1>
         <input type="checkbox" id="menu-toggle" class="menu-toggle">
         <label for="menu-toggle" class="menu-icon">
@@ -25,7 +25,6 @@
         <nav>
             <ul class="nav-list" id="nav-list">
                 <li><a href="#home">Inicio <ion-icon name="home-outline"></ion-icon> </a></li>
-                <li><a href="#notificaciones">Notificaciones <ion-icon name="notifications-circle-outline"></ion-icon> </a></li>
                 <li><a href="#carrito"> Carrito <ion-icon name="cart-outline"></ion-icon></a> </li>
                 <li><a href="ofertar-material.html">User1 <ion-icon name="person-circle-outline"></ion-icon> </a></li>
 
